# siter

./: .gitignore  Cargo.toml  readme.md
src/: config.rs  err.rs  files.rs  init.rs  lib.rs  m_exec.rs  main.rs  parser.rs  pass.rs  toml_util.rs  util.rs
src/templates/: mod.rs  parser.rs  pass.rs  table.rs
templates/: svg_pics.ito
test_data/: page.html  part.md  start.md
test_site/: root_config.ito  root_config.toml
test_site/content/: file_reader.md  index.md  p1.html  p2.html  setter.md
test_site/content/infos/: dirs.md  iholder.md  orig.md
test_site/static/: cows.css
test_site/templates/: page.html  partial.part
