[package]
name = "siter"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "siter"

[[bin]]
path = "src/main.rs"
name = "siter_gen"

[dependencies]
clap_conf ={path="../clap_conf/"}
gobble = {path="../gobble/"}
anyhow = "1.0.31"
thiserror = "1.0.20"
templito = {path="../templito/"}
