[package]
name = "siter"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["static","website","generator"]
license = "MIT"
readme="readme.md"
description="A static site generator where even content and config are templates"
repository="https://github.com/storyfeet/siter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "siter"

[[bin]]
path = "src/main.rs"
name = "siter_gen"

[dependencies]
clap_conf ="0.1.5"
gobble = "0.6.1"
anyhow = "1.0.31"
thiserror = "1.0.20"
templito = "0.1.0"
